--- a/index.html
+++ b/index.html
@@ -214,26 +214,38 @@
             citizenship: `
                 <h3>Citizenship Details</h3>
 		<hr>
-                <p><strong>Number:-</strong>28-01-065-02165</p>
-                <p><strong>Issued Date:-</strong>2065-04-15 B.S.</p>
-                <p><strong>Issued By:-</strong>CDO, Lalitpur</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Number:-</strong>28-01-065-02165</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Issued Date:-</strong>2065-04-15 B.S.</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Issued By:-</strong>CDO, Lalitpur</p>
             `,
             passport: `
                 <h3>Passport Details</h3>
 		<hr>
-                <p><strong>Number:-</strong>09954740</p>
-                <p><strong>Issued Date:-</strong>17th August 2016</p>
-                <p><strong>Expiry Date:-</strong>16th August 2026</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Number:-</strong><span>09954740</span></p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Issued Date:-</strong>17th August 2016</p>
+               <p style="display: flex; justify-content: space-between;">
+                <strong>Expiry Date:-</strong>16th August 2026</p>
             `,
             kukl: `
                 <h3>KUKL Details</h3>
 		<hr>
-                <p><strong>Name:-</strong> Kaji Lal Maharjan</p>
-                <p><strong>Address:-</strong> Tyagal</p>
-                <p><strong>Area No.:-</strong> 07-03-12</p>
-                <p><strong>Customer No:-</strong> 1118036130</p>
-                <p><strong>Branch:-</strong> LALITPUR</p>
-                <p><strong>Connection No.:-</strong> 512</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Name:-</strong> Kaji Lal Maharjan</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Address:-</strong> Tyagal</p>
+               <p style="display: flex; justify-content: space-between;">
+                <strong>Area No.:-</strong> 07-03-12</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Customer No:-</strong> 1118036130</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Branch:-</strong> LALITPUR</p>
+               <p style="display: flex; justify-content: space-between;">
+                <strong>Connection No.:-</strong> 512</p>
             `,
             nead: `
                 <h3>NEA-Dhalachhen Details</h3>
@@ -245,59 +257,84 @@
             neag: `
                 <h3>NEA-Gwarko Details</h3>
                 <hr>
-                <p><strong>Customer Name:</strong>Kaji Lal Maharjan</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Customer Name:</strong>Kaji Lal Maharjan</p>
                 <p><strong>Consumer Id:</strong>47204</p>
                 <p><strong>Sc. Number:</strong>038.08.025</p>
             `,
             laxb: `
                 <h3>Laxmi Sunrise Bank Detail</h3>
                 <hr>
-                <p><strong>A/C Number:</strong> -</p>
-                <p><strong>A/C Opened Date:</strong> -</p>
-                <p><strong>Debit Card Number:</strong> -</p>
-                <p><strong>Credit Card Number:</strong> -</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>A/C Number:</strong> -</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>A/C Opened Date:</strong> -</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Debit Card Number:</strong> -</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Credit Card Number:</strong> -</p>
                 <hr>
-                <p><strong>Contact Number:</strong> -</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Contact Number:</strong> -</p>
             `,
             gime: `
                 <h3>Global IME Bank Details</h3>
                 <hr>
-                <p><strong>A/C Number:</strong> -</p>
-                <p><strong>A/C Opened Date:</strong> -</p>
-                <p><strong>Debit Card Number:</strong> -</p>
-                <p><strong>Credit Card Number:</strong> -</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>A/C Number:</strong> -</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>A/C Opened Date:</strong> -</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Debit Card Number:</strong> -</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Credit Card Number:</strong> -</p>
                 <hr>
-                <p><strong>Contact Number:</strong> -</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Contact Number:</strong> -</p>
             `,
             stck: `
                 <h3>Share/Stock Details</h3>
                 <hr>
-                <p><strong>BOID Number:</strong> -</p>
-                <p><strong>Open Date:</strong> -</p>
-                <p><strong>DMat A/C Expiry:</strong> -</p>
-                <p><strong>Mero Share Expiry:</strong> -</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>BOID Number:</strong> -</p>
+               <p style="display: flex; justify-content: space-between;">
+                <strong>Open Date:</strong> -</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>DMat A/C Expiry:</strong> -</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Mero Share Expiry:</strong> -</p>
             `,
             licn: `
                 <h3>Licence Details</h3>
 		<hr>
-                <p><strong>Number:-</strong>09954740</p>
-                <p><strong>Issued Date:-</strong>17th August 2016</p>
-                <p><strong>Expiry Date:-</strong>16th August 2026</p>
-		<p><strong>Issued By:-</strong>CDO, Lalitpur</p>
+               <p style="display: flex; justify-content: space-between;">
+                <strong>Number:-</strong>09954740</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Issued Date:-</strong>17th August 2016</p>
+               <p style="display: flex; justify-content: space-between;">
+                <strong>Expiry Date:-</strong>16th August 2026</p>
+		           <p style="display: flex; justify-content: space-between;">
+		            <strong>Issued By:-</strong>CDO, Lalitpur</p>
 	    `,
             pan: `
                 <h3>PAN Card Details</h3>
 		<hr>
-                <p><strong>Number:-</strong>09954740</p>
-                <p><strong>Issued Date:-</strong>17th August 2016</p>
-                <p><strong>Issued By:-</strong>CDO, Lalitpur</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Number:-</strong>09954740</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Issued Date:-</strong>17th August 2016</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Issued By:-</strong>CDO, Lalitpur</p>
 	    `,
             voter: `
                 <h3>Voter Card Details</h3>
 		<hr>
-                <p><strong>Number:-</strong>09954740</p>
-                <p><strong>Issued Date:-</strong>2065-04-15 B.S.</p>
-                <p><strong>Issued By:-</strong>CDO, Lalitpur</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Number:-</strong>09954740</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Issued Date:-</strong>2065-04-15 B.S.</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Issued By:-</strong>CDO, Lalitpur</p>
 
 	    `
 
