--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         };
 
         // Predefined password
-        const correctPassword = "1234"; // Change this to your desired password
+        const correctPassword = ""; // Change this to your desired password
 
         // Variable to store the selected option
         let selectedOption = null;
