--- a/index.html
+++ b/index.html
@@ -250,17 +250,22 @@
             nead: `
                 <h3>NEA-Dhalachhen Details</h3>
                 <hr>
-                <p><strong>Customer Name:</strong>Kaji Bdr. Maharjan</p>
-                <p><strong>Consumer Id:</strong>41203</p>
-                <p><strong>Sc. Number:</strong>006.22.018</p>
+                <p style="display: flex; justify-content: space-between;">
+		<strong>Customer Name:</strong>Kaji Bdr. Maharjan</p>
+                <p style="display: flex; justify-content: space-between;">
+		<strong>Consumer Id:</strong>41203</p>
+             	 <p style="display: flex; justify-content: space-between;">
+		<strong>Sc. Number:</strong>006.22.018</p>
             `,
             neag: `
                 <h3>NEA-Gwarko Details</h3>
                 <hr>
                 <p style="display: flex; justify-content: space-between;">
                 <strong>Customer Name:</strong>Kaji Lal Maharjan</p>
-                <p><strong>Consumer Id:</strong>47204</p>
-                <p><strong>Sc. Number:</strong>038.08.025</p>
+                <p style="display: flex; justify-content: space-between;">
+		<strong>Consumer Id:</strong>47204</p>
+                <p style="display: flex; justify-content: space-between;">
+		<strong>Sc. Number:</strong>038.08.025</p>
             `,
             laxb: `
                 <h3>Laxmi Sunrise Bank Detail</h3>
