--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
  	    <option value="licn">Licence</option>
 	    <option value="pan">PAN Card</option>
 	    <option value="voter">Voter Card</option>
+	    <option value="nid">National ID</option>
         </select>
     </div>
 
@@ -340,10 +341,17 @@
                 <strong>Issued Date:-</strong>2065-04-15 B.S.</p>
                 <p style="display: flex; justify-content: space-between;">
                 <strong>Issued By:-</strong>CDO, Lalitpur</p>
-
-	    `
-
-
+	    `,
+            nid: `
+                <h3>Voter Card Details</h3>
+		<hr>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Number:-</strong>09954740</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Issued Date:-</strong>2065-04-15 B.S.</p>
+                <p style="display: flex; justify-content: space-between;">
+                <strong>Issued By:-</strong>CDO, Lalitpur</p>
+	 `
         };
 
         // Predefined password
