--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                 <strong>Issued By:-</strong>CDO, Lalitpur</p>
 	    `,
             nid: `
-                <h3>Voter Card Details</h3>
+                <h3>National ID Details</h3>
 		<hr>
                 <p style="display: flex; justify-content: space-between;">
                 <strong>Number:-</strong>09954740</p>
