--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@
                 <strong>Issued Date:-</strong>17th August 2016</p>
                <p style="display: flex; justify-content: space-between;">
                 <strong>Expiry Date:-</strong>16th August 2026</p>
+		<p style="display: flex; justify-content: space-between;">
+		<strong>Issued By:-</strong>MOFA</p>
             `,
             kukl: `
                 <h3>KUKL Details</h3>
@@ -314,23 +316,23 @@
                 <h3>Licence Details</h3>
 		<hr>
                <p style="display: flex; justify-content: space-between;">
-                <strong>Number:-</strong>09954740</p>
+                <strong>Number:-</strong>01-06-01003951</p>
                 <p style="display: flex; justify-content: space-between;">
-                <strong>Issued Date:-</strong>17th August 2016</p>
+                <strong>Issued Date:-</strong>18-01-2022</p>
                <p style="display: flex; justify-content: space-between;">
-                <strong>Expiry Date:-</strong>16th August 2026</p>
+                <strong>Expiry Date:-</strong>17-01-2027</p>
 		           <p style="display: flex; justify-content: space-between;">
-		            <strong>Issued By:-</strong>CDO, Lalitpur</p>
+		            <strong>Issued By:-</strong>N/A</p>
 	    `,
             pan: `
                 <h3>PAN Card Details</h3>
 		<hr>
                 <p style="display: flex; justify-content: space-between;">
-                <strong>Number:-</strong>09954740</p>
+                <strong>Number:-</strong>111677845</p>
                 <p style="display: flex; justify-content: space-between;">
-                <strong>Issued Date:-</strong>17th August 2016</p>
+                <strong>Issued Date:-</strong>2076-04-02 B.S.</p>
                 <p style="display: flex; justify-content: space-between;">
-                <strong>Issued By:-</strong>CDO, Lalitpur</p>
+                <strong>Issued By:-</strong>Inland Reveneu Department</p>
 	    `,
             voter: `
                 <h3>Voter Card Details</h3>
@@ -346,11 +348,11 @@
                 <h3>National ID Details</h3>
 		<hr>
                 <p style="display: flex; justify-content: space-between;">
-                <strong>Number:-</strong>09954740</p>
+                <strong>Number:-</strong>746-461-485-4</p>
                 <p style="display: flex; justify-content: space-between;">
-                <strong>Issued Date:-</strong>2065-04-15 B.S.</p>
+                <strong>Issued Date:-</strong>N/A</p>
                 <p style="display: flex; justify-content: space-between;">
-                <strong>Issued By:-</strong>CDO, Lalitpur</p>
+                <strong>Issued By:-</strong>N/A</p>
 	 `
         };
 
