--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
       <option value="neag">NEA-Gwarko</option>
       <option value="laxb">Laxmi Sunrise Bank</option>
       <option value="gime">Global IME Bank</option>
+      <option value="nab">Nabil Bank</option
       <option value="stck">Share/Stock</option>
       <option value="licn">Licence</option>
       <option value="pan">PAN Card</option>
