--- a/index.html
+++ b/index.html
@@ -221,6 +221,21 @@
         <p style="display: flex; justify-content: space-between;">
         <strong>Contact Number:</strong> -</p>
       `,
+      nab: `
+        <h3>Nabil Bank Details</h3>
+        <hr>
+        <p style="display: flex; justify-content: space-between;">
+        <strong>A/C Number:</strong>08807010006081</p>
+        <p style="display: flex; justify-content: space-between;">
+        <strong>A/C Opened Date:</strong> -</p>
+        <p style="display: flex; justify-content: space-between;">
+        <strong>Debit Card Number:</strong> -</p>
+        <p style="display: flex; justify-content: space-between;">
+        <strong>Credit Card Number:</strong> -</p>
+        <hr>
+        <p style="display: flex; justify-content: space-between;">
+        <strong>Contact Number:</strong> -</p>
+      `,
       stck: `
         <h3>Share/Stock Details</h3>
         <hr>
